load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mpsquic.go"],
    importpath = "github.com/scionproto/scion/go/lib/snet/mpsquic",
    visibility = ["//visibility:public"],
    deps = [
        "//go/lib/addr:go_default_library",
        "//go/lib/common:go_default_library",
        "//go/lib/snet:go_default_library",
        "@com_github_lucas_clemente_quic_go//:go_default_library",
    ],
)
